<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_ask"
        android:icon="@drawable/ic_nav_ask"
        android:title="@string/nav_ask" />
    <item
        android:id="@+id/nav_flashcards"
        android:icon="@drawable/ic_nav_flashcards"
        android:title="@string/nav_flashcards" />
    <item
        android:id="@+id/nav_progress"
        android:icon="@drawable/ic_nav_progress"
        android:title="@string/nav_progress" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/nav_profile" />
</menu>
